FlowTeam/force-app/main/default/objects/Project__c/fields/Only_1_SquadLead__c.field-meta.xml
<CustomField>
    <fullName>Only_1_SquadLead__c</fullName>
    <label>Only 1 SquadLead?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>