FlowTeam/force-app/main/default/objects/Project__c/fields/Project_Cost__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost__c</fullName>
    <label>Project Cost</label>
    <summarizedField>ProjectLineItem__c.TotalCostxRol__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>