FlowTeam/force-app/main/default/objects/Project__c/fields/RolHoursCovered__c.field-meta.xml
<CustomField>
    <fullName>RolHoursCovered__c</fullName>
    <label>RolHoursCovered?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>