FlowTeam/force-app/main/default/objects/Project__c/fields/Squadlead__c.field-meta.xml
<CustomField>
    <fullName>Squadlead__c</fullName>
    <label>Squadlead</label>
    <length>15</length>
    <type>Text</type>
</CustomField>