FlowTeam/force-app/main/default/objects/Project__c/fields/SquadSafeId__c.field-meta.xml
<CustomField>
    <fullName>SquadSafeId__c</fullName>
    <formula>LEFT( SquadLead__r.Id  ,15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SquadSafeId</label>
    <type>Text</type>
</CustomField>