FlowTeam/force-app/main/default/objects/Project__c/fields/TareasImcompletas__c.field-meta.xml
<CustomField>
    <fullName>TareasImcompletas__c</fullName>
    <description>Usamos para validar si hay tareas incompletas, pegamos con flow un valor si hay pendientes y si no hay pendientes no se pega nada.</description>
    <label>TareasImcompletas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>