FlowTeam/force-app/main/default/objects/Project__c/fields/TotalPendingHs__c.field-meta.xml
<CustomField>
    <fullName>TotalPendingHs__c</fullName>
    <label>TotalPendingHs</label>
    <summarizedField>ProjectLineItem__c.Hours_Pending__c</summarizedField>
    <summaryForeignKey>ProjectLineItem__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>