FlowTeam/force-app/main/default/objects/Project__c/validationRules/BloqueoInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueoInProgress</fullName>
    <active>false</active>
    <description>todos los campos editables vamos a impedir su edicion</description>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;In Progress&quot;),
OR(ISCHANGED(EndDate__c), 
ISCHANGED(StartDate__c), 
ISCHANGED(OwnerId), 
ISCHANGED(Project_Cost__c), 
ISCHANGED(Project_Manager__c), 
ISCHANGED(Name), 
ISCHANGED(Quantity_Hs__c), 
ISCHANGED(Total_Amount__c),
ISCHANGED(TotalPendingHs__c)))</errorConditionFormula>
    <errorMessage>No puede editarse un proyecto que esta In Progress</errorMessage>
</ValidationRule>