FlowTeam/force-app/main/default/objects/Project__c/validationRules/FaltanHorasXcubrir.validationRule-meta.xml
<ValidationRule>
    <fullName>FaltanHorasXcubrir</fullName>
    <active>true</active>
    <description>Si alguno de los recursos no tiene sus horas vendidas completamente asignadas (puede tener mas) arroja error.</description>
    <errorConditionFormula>RolHoursCovered__c = &quot;false&quot;</errorConditionFormula>
    <errorMessage>Algun Rol tiene pendientes horas por asignar versus las vendidas - corregir</errorMessage>
</ValidationRule>