FlowTeam/force-app/main/default/objects/Project__c/validationRules/ProjectoEnPerdida.validationRule-meta.xml
<ValidationRule>
    <fullName>ProjectoEnPerdida</fullName>
    <active>true</active>
    <description>Si el projecto esta en perdida arroja error</description>
    <errorConditionFormula>Project_Cost__c &gt;  Total_Amount__c</errorConditionFormula>
    <errorMessage>El Projecto esta en situacion de Pérdida - corrija valores que afectan al costo del proyecto.</errorMessage>
</ValidationRule>