FlowTeam/force-app/main/default/objects/Project__c/validationRules/SquadLeadRule.validationRule-meta.xml
<ValidationRule>
    <fullName>SquadLeadRule</fullName>
    <active>true</active>
    <description>Solo puede haber 1 SquadLead asignado</description>
    <errorConditionFormula>Only_1_SquadLead__c  &lt;&gt; 1</errorConditionFormula>
    <errorMessage>El Projecto debe tener un solo  SquadLead</errorMessage>
</ValidationRule>