FlowTeam/force-app/main/default/objects/Project__c/validationRules/TareasIncompletas.validationRule-meta.xml
<ValidationRule>
    <fullName>TareasIncompletas</fullName>
    <active>true</active>
    <description>Si hay tareas incompletas arrojar error</description>
    <errorConditionFormula>TareasImcompletas__c &gt;0</errorConditionFormula>
    <errorMessage>El Projecto tiene tareas pendientes por cerrar. Revise las tareas para actualizar</errorMessage>
</ValidationRule>