FlowTeam/force-app/main/default/objects/Project__c/listViews/Projects_List.listView-meta.xml
<ListView>
    <fullName>Projects_List</fullName>
    <columns>NAME</columns>
    <columns>Project_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Quantity_Hs__c</columns>
    <columns>TotalPendingHs__c</columns>
    <filterScope>Mine</filterScope>
    <label>Projects List</label>
</ListView>